--- a/tst.yml
+++ b/tst.yml
@@ -43,3 +43,18 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+
+     aci_vrf: 
+       vrf: am-vrf
+       tenant: am-tn
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+     aci_bd: 
+       bd: am_bd
+       vrf: am-vrf
+       tenant: am-tn
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
