--- a/tst.yml
+++ b/tst.yml
@@ -37,6 +37,7 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+       state: absent
 
    - name: create VRF
      aci_vrf: 
@@ -45,7 +46,7 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
-
+       state: absent
    - name: create a Bridge-Domain
      aci_bd: 
        tenant: am-tn
@@ -54,3 +55,5 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+       state: absent
+       
