--- a/manual_method.yml
+++ b/manual_method.yml
@@ -54,3 +54,21 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+
+   - name: create a Bridge-Domain Sub-net
+     aci_bd_subnet: 
+       tenant: am-tn
+       bd: am-bd
+       gateway: 200.1.1.1
+       mask: 24
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+   - name: create Application Profile
+     aci_ap: 
+       ap: am-ap
+       tenant: am-tn
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
