--- a/r2.yml
+++ b/r2.yml
@@ -9,7 +9,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: 'sandboxapicdc.cisco.com'
+       default: 'https://10.10.20.14/'
        private: no
 
      - name: "user"
