--- a/m2.yml
+++ b/m2.yml
@@ -9,7 +9,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: 'https://10.10.20.14/'
+       default: '10.10.20.14'
        private: no
 
      - name: "user"
@@ -23,10 +23,44 @@
        unsafe: yes
 
    tasks:
-   - name: Remove a tenant
+   - name: create a tenant
      aci_tenant: 
        tenant: am-tn
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
-       state: absent
+
+   - name: create VRF
+     aci_vrf: 
+       vrf: am-vrf
+       tenant: am-tn
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+   - name: create a Bridge-Domain
+     aci_bd: 
+       tenant: am-tn
+       bd: am-bd
+       vrf: am-vrf
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+   - name: create a Bridge-Domain Sub-net
+     aci_bd_subnet: 
+       tenant: am-tn
+       bd: am-bd
+       gateway: 200.1.1.1
+       mask: 24
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+   - name: create Application Profile
+     aci_ap: 
+       ap: am-ap
+       tenant: am-tn
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
