--- a/remove_tenant.yml
+++ b/remove_tenant.yml
@@ -1,7 +1,7 @@
 ---
 -  hosts: apic
    any_errors_fatal: true
-
+   gather_facts: no
    vars:
      ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
