--- a/m2.yml
+++ b/m2.yml
@@ -1,6 +1,7 @@
 ---
 -  hosts: apic
    any_errors_fatal: true
+   gather_facts: no
 
    vars:
      ansible_connection: local
@@ -9,7 +10,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: '10.10.20.14'
+       default: 'sandboxapicdc.cisco.com'
        private: no
 
      - name: "user"
@@ -38,24 +39,47 @@
        username: "{{ user }}"
        password: "{{ pass }}"
 
-   - name: create a Bridge-Domain
+   - name: create a Bridge-Domain-webserver
      aci_bd: 
        tenant: am-tn
-       bd: am-bd
+       bd: am-bd-webserver
+       vrf: am-vrf
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+   
+   - name: create a Bridge-Domain-appserver
+     aci_bd: 
+       tenant: am-tn
+       bd: am-bd-appserver
        vrf: am-vrf
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
 
-   - name: create a Bridge-Domain Sub-net
-     aci_bd_subnet: 
+- name: create a Bridge-Domain-data_centre
+     aci_bd: 
        tenant: am-tn
-       bd: am-bd
-       gateway: 200.1.1.1
-       mask: 24
+       bd: am-bd-data_centre
+       vrf: am-vrf
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+       subnets:
+         - name: 10.0.2.1
+           mask: 24
+           scope: public
+
+#   - name: create a Bridge-Domain Sub-net
+#     aci_bd_subnet: 
+#       tenant: am-tn
+#       bd: am-bd
+#       gateway: 200.1.1.1
+#       mask: 24
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ user }}"
+#       password: "{{ pass }}"
+
 
    - name: create Application Profile
      aci_ap: 
@@ -64,3 +88,26 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+  
+   - name: Add a new EPG
+     aci_epg:
+       tenant: am-tn
+       ap: am-ap
+       epg: am-epg
+       description: "descrip"
+       bd: am-bd
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+
+#   - name: Add a Contract
+#    aci_contract:
+#      tenant: am-tn
+#      ap: am-ap
+#      epg: am-epg
+#      description: "descrip"
+#      bd: am-bd
+#      host: "{{ inventory_hostname }}"
+#      username: "{{ user }}"
+#      password: "{{ pass }}"
+
