--- a/r3.yml
+++ b/r3.yml
@@ -2,32 +2,33 @@
 -  hosts: apic
    any_errors_fatal: true
    gather_facts: no
-
+   
    vars:
      ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
+     tn_name: 'am_tn'
 
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: '10.10.20.14'
+       default: 'sandbox-iosxe-latest-1.cisco.com'
        private: no
 
      - name: "user"
        prompt: "Enter your APIC Username"
-       default: 'admin'
+       default: 'developer'
        unsafe: yes
 
      - name: "pass"
        prompt: "Enter your APIC Password"
-       default: 'C1sco12345'
        private: yes
+       default: 'C1sco12345'
        unsafe: yes
 
    tasks:
    - name: Remove a tenant
      aci_tenant: 
-       tenant: am-tn
+       tenant: "{{ tn_name }}"
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
