--- a/r4.yml
+++ b/r4.yml
@@ -7,19 +7,15 @@
      ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
      tn_name: 'am_tn'
-     bd_1: 'Web_server'
-     bd_2: 'App_server'
-     bd_3: 'Data_Base'
-     vrf_name: 'am_vrf'
-     ap_name: 'am_ap'
-     l3out_name: 'L3_Out_Element'
-     epg_1: 'Web_Server'
-     epg_2: 'App_Server'
-     epg_3: 'Data_Base'
-     cont_1: 'App_Web'
-     cont_2: 'DB_App'
-     cont_3: 'Web_L3'
 
+     ansible_connection: network_cli
+     ansible_become: yes
+     ansible_become_method: enable
+     ansible_network_os: ios
+     ansible_user: 'developer'
+     ansible_ssh_pass: 'C1sco12345'
+     ansible_port: 22
+     netconf_port: 830
 
    vars_prompt:
      - name: "apic_ip"
