--- a/r4.yml
+++ b/r4.yml
@@ -4,7 +4,7 @@
    gather_facts: no
 
    vars:
-     ansible_connection: local
+     #ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
      tn_name: 'am_tn'
 
