--- a/r4.yml
+++ b/r4.yml
@@ -4,11 +4,11 @@
    gather_facts: no
 
    vars:
-     #ansible_connection: local
+     ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
      tn_name: 'am_tn'
 
-     ansible_connection: network_cli
+     #ansible_connection: network_cli
      ansible_become: yes
      ansible_become_method: enable
      ansible_network_os: ios
