--- a/full.yml
+++ b/full.yml
@@ -19,7 +19,7 @@
      cont_1: 'App_Web'
      cont_2: 'DB_App'
      cont_3: 'Web_L3'
-   
+
 
    vars_prompt:
      - name: "apic_ip"
@@ -117,7 +117,7 @@
            type: consumer
          - name: "{{ cont_3 }}"
            type: provider
-           
+
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
@@ -161,29 +161,27 @@
      aci_epg:
        tenant: "{{ tn_name }}"
        ap: "{{ ap_name }}"
-       epg: "{{ epg_4 }}"
-       description: "Description of epg_database"
        bd: "{{ bd_3 }}"
          
   
-   - name: Create External_EPG
-     cisco.mso.mso_schema_template_external_epg:
-       schema: Schema 1
-       template: Template 1
-       external_epg: External EPG 1
-       l3out: "{{ l3out_name }}" 
-       vrf:
-         name: VRF
-         schema: Schema 1
-         template: Template 1
-       contracts: 
-         - name: "{{ cont_3 }}"
-           type: consumer
+#   - name: Create External_EPG
+#     cisco.mso.mso_schema_template_external_epg:
+#       schema: Schema 1
+#       template: Template 1
+#       external_epg: "{{ epg_4 }}"
+#       l3out: "{{ l3out_name }}" 
+#       vrf:
+#         name: VRF
+#         schema: Schema 1
+#         template: Template 1
+#       contracts: 
+#         - name: "{{ cont_3 }}"
+#           type: consumer
    
 
-       host: "{{ inventory_hostname }}"
-       username: "{{ user }}"
-       password: "{{ pass }}"
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ user }}"
+#       password: "{{ pass }}"
        
 
 
@@ -231,7 +229,7 @@
 
 
 # In order to advertise web-server dridger domain to the outside world
-   - name: Contract between (Web_Server & L3)
+   - name: Contract between (Web_Server & L3-out)
      aci_contract:
        contract: "{{ cont_3 }}"
        tenant: "{{ tn_name }}"
