--- a/several_EPGs.yml
+++ b/several_EPGs.yml
@@ -55,39 +55,41 @@
      aci_epgs:
        tenant: "{{ tn_name }}"
        ap: "{{ ap_name }}"
-       - epg: "{{ epg_1 }}"
-         description: "Description of EPG_Web"
-         bd: "{{ db_1 }}"
-         contracts: 
-           - name: "{{ cont_1 }}"
-             type: consumer
-           - name: "{{ cont_3 }}"
-             type: provider
+       epgs:
+         - name: "{{ epg_1 }}"
+           description: "Description of EPG_Web"
+           bd: "{{ db_1 }}"
+           contracts: 
+             - name: "{{ cont_1 }}"
+               type: consumer
+             - name: "{{ cont_3 }}"
+               type: provider
        
-       - epg: "{{ epg_2 }}"
-         description: "Description of EPG_App"
-         bd: "{{ db_2 }}"
-         contracts: 
-           - name: "{{ cont_1 }}"
-             type: provider
-           - name: "{{ cont_2 }}"
-             type: consumer
+
+         - name: "{{ epg_2 }}"
+           description: "Description of EPG_App"
+           bd: "{{ db_2 }}"
+           contracts: 
+             - name: "{{ cont_1 }}"
+               type: provider
+             - name: "{{ cont_2 }}"
+               type: consumer
        
-       - epg: "{{ epg_3 }}"
-         description: "Description of epg_database"
-         bd: "{{ bd_3 }}"
-         contracts:
-           - name: "{{ cont_2 }}"
-             type: provider
+         - name: "{{ epg_3 }}"
+           description: "Description of epg_database"
+           bd: "{{ bd_3 }}"
+           contracts:
+             - name: "{{ cont_2 }}"
+               type: provider
 
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
 
 
-  - name: Create External_EPG
+   - name: Create External_EPG
      aci_l3out_extepg:
-       nmae: "{{ epg_4 }}"
+       name: "{{ epg_4 }}"
        l3out: "{{ l3out_name }}" 
        vrf: "{{ vrf_name }}"
 
