--- a/full.yml
+++ b/full.yml
@@ -2,6 +2,7 @@
 -  hosts: apic
    any_errors_fatal: true
    gather_facts: no
+   validate_certs: false
 
    vars:
      ansible_connection: local
