--- a/several_EPGs.yml
+++ b/several_EPGs.yml
@@ -2,6 +2,7 @@
 -  hosts: apic
    any_errors_fatal: true
    gather_facts: no
+   validate_certs: false
 
    vars:
      ansible_connection: local
@@ -95,7 +96,7 @@
        subnets:
          - name: 10.0.1.1
            mask: 24
-           scope: public
+           scope: private
 
 
    - name: create a Bridge-Domain_Data_Base
@@ -109,7 +110,7 @@
        subnets:
          - name: 10.0.2.1
            mask: 24
-           scope: public
+           scope: private
 
 
 
