--- a/r2.yml
+++ b/r2.yml
@@ -9,7 +9,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: '10.10.20.14/'
+       default: '10.10.20.14'
        private: no
 
      - name: "user"
@@ -19,6 +19,7 @@
 
      - name: "pass"
        prompt: "Enter your APIC Password"
+       default: 'QMTAXVNT'
        private: yes
        unsafe: yes
 
