--- a/r2.yml
+++ b/r2.yml
@@ -1,11 +1,13 @@
 ---
 -  hosts: apic
+   any_errors_fatal: true
    gather_facts: no
    validate_certs: false
 
    vars:
      ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
+     tn_name: 'am_tn'
 
    vars_prompt:
      - name: "apic_ip"
@@ -24,20 +26,11 @@
        private: yes
        unsafe: yes
 
-
    tasks:
-   - name: Authentication
-     aci_rest:
-       host: "{{ inventory_hostname }}"
-       username: "{{ user }}"
-       password: "{{ pass }}"
-       use_ssl: yes
-       validate_certs: false
-       path: api/mo/uni.json
- 
+
    - name: Remove a tenant
      aci_tenant: 
-       tenant: am-tn
+       tenant: "{{ tn_name }}"
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
