--- a/r2.yml
+++ b/r2.yml
@@ -2,7 +2,7 @@
 -  hosts: apic
    any_errors_fatal: true
    gather_facts: no
- #  validate_certs: false
+   validate_certs: false
 
    vars:
      ansible_connection: local
@@ -17,12 +17,12 @@
 
      - name: "user"
        prompt: "Enter your APIC Username"
-       default: 'admin'
+       default: 'ameen.azza'
        unsafe: yes
 
      - name: "pass"
        prompt: "Enter your APIC Password"
-       default: 'C1sco12345'
+       default: 'QMTAXVNT'
        private: yes
        unsafe: yes
 
