--- a/r2.yml
+++ b/r2.yml
@@ -34,4 +34,4 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
-       state: absent
+       state: present
